# FletNix

./: .gitignore  readme.md
client/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
client/app/: layout.tsx  page.tsx
client/app/login/: page.tsx
client/app/show/[id]/: page.tsx
client/components/: Navbar.tsx
client/lib/: api.ts  types.ts
server/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
server/app/: config.py  database.py  main.py
server/app/models/: auth.py  show.py
server/app/routers/: auth.py  shows.py
server/app/services/: auth_service.py  show_service.py
server/data_ingestion/: ingest.py  load_data.py
server/tests/: conftest.py  test_api.py
